--- a/citations.bib
+++ b/citations.bib
@@ -42,3 +42,5 @@ language     = {english}
 }
 
 @BOOK{Gilmore2008-jw, title = "Practical gamma-ray spectroscopy", author = "Gilmore, Gordon", publisher = "Wiley-Blackwell", edition = 2, month = apr, year = 2008, address = "Hoboken, NJ", language = "en" }
+
+@BOOK{Lutz_2007, title="Semiconductor radiation detectors", publisher="Springer", author="Lutz, Gerhad", year=2007,language = "en" } 
