--- a/Semiconductors.tex
+++ b/Semiconductors.tex
@@ -6,15 +6,28 @@
 \chapter{Semiconductor detectors with p-n junction}
 % -----------------------------------------------
 The semiconductor structures has unique properties, which make them usable not only for a particle/photon detection. There are many types of semiconductor detectors - conventional detectors of light intensity with spectral range from infrared to UV - photoresistors and photodiodes, low intensities and single photons detectors - avalanche photodiodes (APDs), for imagining - CCD and CMOS cameras, x-ray, gamma and other particles rates and energy detectors - special photodiodes, for particle position and energy measurements - matrix drift and strip detectors. The essential role for gamma spectroscopy have the p-n junction detectors - detection diodes capable of capturing high-energy gamma photons with sufficient energy resolution and efficiency.
- 
 
-\section{Semiconductor structure}
-The basic difference between conductors, insulators and semiconductors is the valence and conduction band structure. In case of conductors, the valence band overlaps the conduction band. For insulators, there is no overlap, and the energy gap $E_{\textrm{g}}$ between the two bands is so high, that it makes any transitions of electrons nearly impossible. However in case of  semiconductors, the $E_{\textrm{g}}$ is small enough to allow the electron jump into the conduction band and leaving the hole in valence band after receiving a sufficient amount of energy - in form of thermal energy $E_{\textrm{T}} = kT$, energy in static electric field $E_{\textrm{s}} = -e\phi$ or as a photon $E_{\textrm{photon}} = \hbar \omega$. The last one is the most important, because it allows us to use the semiconductors as detectors.
 \par
-The semiconductor materials have usually form of crystal of diamond structure (two FCC lattices bounded together.).   
+To detect Mössbauer 14.4 keV gammas our primary choice are the Si PIN diodes due to the guaranteed high detection efficiency under 25 keV. 
+
+\section{The crystal structure of semiconductor}
+Since we are not dealing with single atoms characterized by the well-known discrete energy levels, but with solid crystals, there is another  model describing the energy levels - the band structure. The energy levels are very close each other that they nearly form a continuum. This different behaviour is a result of a periodical potential inside the crystal lattice. However, the electron energy $E_{n}$ is not the only quantum number describing the behaviour of electrons inside the periodical potential. By solving Schrödinger equation with the help of so-called Bloch's theorem, we come to a conclusion that the second important quantum number is the wave vector $k$. These two quantum numbers are bounded together by dispersion relations $E = E(\vec{k})$, which is characteristic for every crystal and may play role when it comes to transitions of electrons between bands.
+
+\par
+The basic difference between conductors, insulators and semiconductors is the valence and conduction band structure. In case of conductors, the valence band overlaps the conduction band. The electrons in conduction band can move nearly freely throughout the crystal. For insulators, there is no overlap, and the energy gap $E_{\textrm{g}}$ between the two bands is so high, that it makes any transitions of electrons nearly impossible. However in case of  semiconductors, the $E_{\textrm{g}}$ is small enough to allow the electron jump into the conduction band and leaving the hole in valence band after receiving a sufficient amount of energy - in form of thermal energy $E_{\textrm{T}} = kT$, energy in static electric field $E_{\textrm{s}} = -e\phi$ or as a photon with energy quantum $E_{\textrm{photon}} = \hbar \omega$. The last one is the most important, because it allows us to use the semiconductors as detectors. Both the electron and hole participates on conduction, but they have to be treated as quasiparticles with their specific masses and mobilities. At $T = 0$ K, the electrons occupy the lowest possible states and the highest occupied state is defined by energy of Fermi-level $E_{\textrm{F}$
+
+\par
  
+The shape of dispersion relations between energy and $E(\vec{k})$ divides the semiconductors into two categories - direct and indirect semiconductors. For direct semiconductors the minimum in conduction band and maximum in valence band have the same $\vec{k}$, so the transition can occur after the $E_{\textrm{g}}$ is supplied. In case of indirect the minimum and maximum have different $\vec{k}$. To make transition, additional momentum has to be server (for example by phonons) or the supplied energy must be larger to allow transition to the higher state with the same $\vec{k}$.  The Si crystal is an indirect semiconductor.
+
+\par
+The semiconductor materials have usually form of a crystal of diamond structure (two FCC lattices bounded together.) with the lattice atoms bounded by a covalent bond. However in real crystals there are also defects and impurities which may alter the functionality. The impurities can be added by purpose to enhance the properties we seek in procedure called doping. 
  
- 
+\section{P-N junction}
+
+
+- it could be modelled as a capacitor. The capacitance of p-n junction plays a significant role - it alters the dynamical parameters of the detection circuits - it can alter the rising edges of pulses, alter the entire frequency spectra, increase/decrease the SNR.
+
 \section{Fabrication of semiconductors}
 
 
@@ -27,7 +40,7 @@ The suitable materials for construction of ionizing radiation detectors are Ge,S
 If we want to detect a particle or photon, is has to interact with the detector material - in semiconductor the creation of electron-hole pairs is observed. This could be achieved by interaction mechanisms described in previous chapters, which differ for every type of particle and energy. 
 
 \par
-The main of purpose of semiconductor as a detector, is to perform linear conversion of the particle/photon energy into the free charge carriers - electrons in conduction band and holes in valence band. The average energy needed to create a single electron-hole pair is usually a fix constant - in Si it is equal to 3.6 eV \cite{Lutz_2007}. Since the Si is an indirect semiconductor, this value is not equal to gap energy $E_{\textrm{g}} = 1.12$ eV. In case of low-energy gamma the two main mechanisms which take place in producing the charge carriers are photoeffect and compton scattering. 
+The main of purpose of semiconductor as a detector, is to perform a linear conversion of the particle/photon energy into the free charge carriers - electrons in conduction band and holes in valence band. The average energy needed to create a single electron-hole pair is usually a fix constant - in Si it is equal to 3.6 eV \cite{Lutz_2007}. Since the Si is an indirect semiconductor, this value is not equal to gap energy, which is lower ($E_{\textrm{g}} = 1.12$ eV). In case of low-energy gamma the two main mechanisms which take place in producing the charge carriers are photoeffect and compton scattering. 
 
 \par
 The gamma photon striking the detector firstly interacts with a single electron. If the photoeffect takes its place, the
@@ -42,6 +55,10 @@ The gamma photon striking the detector firstly interacts with a single electron.
 \par
 In case of p-n junction the created charge carriers in depleted layer are pushed towards electrodes by internal electric field. The  electronics accumulates the charge and converts it into the voltage pulse signal, which is then analysed to extract the energy information.
 
+
+\par
+The effect which goes against the successful collection of charge carriers is recombination.
+
 \section{Main noise sources and limitations}
 
 \section{Construction scheme of Instruments for gamma detection based on semiconductors}
@@ -55,8 +72,8 @@ In case of p-n junction the created charge carriers in depleted layer are pushed
 \subsection{MIMOS 2}
 
 
-\section{Available semiconductor sensors}
-To detect Mössbauer 14.4 keV gammas our primary choice was Si due to the high detection efficiency under 25 keV. For testing we have chosen one professional Hamamatsu s14605 PIN diode and two commercial PIN diodes: OPF420 - originally designed to be used in optical fibres, BPW34 - visible and near infrared radiation detector.  
+\section{Available detection diodes}
+For testing we have chosen one professional Hamamatsu s14605 PIN diode and two commercial PIN diodes: OPF420 - originally designed to be used in optical fibres, BPW34 - visible and near infrared radiation detector.  
 
 
 
