--- a/citations.bib
+++ b/citations.bib
@@ -44,3 +44,11 @@ language     = {english}
 @BOOK{Gilmore2008-jw, title = "Practical gamma-ray spectroscopy", author = "Gilmore, Gordon", publisher = "Wiley-Blackwell", edition = 2, month = apr, year = 2008, address = "Hoboken, NJ", language = "en" }
 
 @BOOK{Lutz_2007, title="Semiconductor radiation detectors", publisher="Springer", author="Lutz, Gerhad", year=2007,language = "en" } 
+
+@misc{compounds,
+author       = {Hamamatsu},
+title     = {Si detectors for high energy particles},
+note       = {\url{https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/high_energy_kspd9002e.pdf}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
