--- a/gammaRays.tex
+++ b/gammaRays.tex
@@ -115,7 +115,9 @@ This effect causes, that the photon loses only a part of its energy and changes 
 \subsubsection{Pair production}
 At much higher energies, the photon can be converted into electron-positron pair. This effect happens near the nucleus, which absorbs a part of the original photon momentum.
 \par
-The pair production along with electron bremsstrahlung radiation  are key effects for electron-photon shower development. If the created electron/positron has sufficient energy, it emits bremsstrahlung photons. These bremsstrahlung photons can again interact via the pair production, and thus creating new electrons again. This process of shower development continues until the energy of electron/positron pairs drops under the energy, which is required to produce bremsstrahlung radiation. 
+The pair production along with electron bremsstrahlung radiation  are key effects for electron-photon shower development. If the created electron/positron has sufficient energy, it emits bremsstrahlung photons. These bremsstrahlung photons can again interact via the pair production, and thus creating new electrons again. This process of shower development continues until the energy of electron/positron pairs drops under the energy, which is required to produce bremsstrahlung radiation.
+\par
+For low-energy gammas the cross-section is so small, which means that for the purposes of this thesis, this interaction effect could be neglected.
 
 
 \subsection{Characteristic energy spectra}
