--- a/Semiconductors.tex
+++ b/Semiconductors.tex
@@ -5,33 +5,40 @@
 % -----------------------------------------------
 \chapter{Semiconductor detectors with p-n junction}
 % -----------------------------------------------
-The semiconductor structures has unique properties, which make them usable not only for a particle/photon detection. There are many types of semiconductor detectors - conventional detectors of light intensity with spectral range from infrared to UV - photoresistors and photodiodes, low intensities and single photons detectors - avalanche photodiodes (APDs), for imagining - CCD and CMOS cameras, x-ray, gamma and other particles rates and energy detectors - special photodiodes, for particle position and energy measurements - matrix drift and strip detectors. The essential role for gamma spectroscopy have the p-n junction detectors - detection diodes capable of capturing high-energy gamma photons with sufficient energy resolution and efficiency.
+The semiconductor structures has unique properties, which make them usable not only for a particle/photon detection. There are many types of semiconductor detectors - conventional detectors of light intensity with spectral range from infrared to UV - photoresistors and photodiodes, low intensities and single photons detectors - avalanche photodiodes (APDs), for imagining - CCD and CMOS cameras, x-ray, gamma and other particles rates and energy detectors - special photodiodes, for particle position and energy measurements - matrix drift and strip detectors. The essential role for gamma spectroscopy have the p-n junction detectors - detection diodes capable of capturing gamma photons with sufficient energy resolution and efficiency.
 
 \par
-To detect Mössbauer 14.4 keV gammas our primary choice are the Si PIN diodes due to the guaranteed high detection efficiency under 25 keV. 
+To detect Mössbauer 14.4 keV gammas our primary choice are the Si PIN diodes for direct detection due to the guaranteed high detection efficiency under 25 keV. 
 
 \section{The crystal structure of semiconductor}
-Since we are not dealing with single atoms characterized by the well-known discrete energy levels, but with solid crystals, there is another  model describing the energy levels - the band structure. The energy levels are very close each other that they nearly form a continuum. This different behaviour is a result of a periodical potential inside the crystal lattice. However, the electron energy $E_{n}$ is not the only quantum number describing the behaviour of electrons inside the periodical potential. By solving Schrödinger equation with the help of so-called Bloch's theorem, we come to a conclusion that the second important quantum number is the wave vector $k$. These two quantum numbers are bounded together by dispersion relations $E = E(\vec{k})$, which is characteristic for every crystal and may play role when it comes to transitions of electrons between bands.
+Since we are not dealing with single atoms characterized by the well-known discrete energy levels, but with solid crystals, there is another  model describing the energy levels - the band structure. The energy levels are very close each other that they nearly form a continuum. This different behaviour is a result of a periodical potential inside the crystal lattice. However, the electron energy $E_{n}$ is not the only quantum number describing the behaviour of electrons inside the periodical potential. By solving Schrödinger equation with the help of so-called Bloch's theorem, we come to a conclusion that the second important quantum number is the wave vector $\vec{k}$. These two quantum numbers are bounded together by dispersion relations $E = E(\vec{k})$, which is characteristic for every crystal and may play role when it comes to transitions of electrons between bands.
 
-\par
+\subsection{Band structure}
 The basic difference between conductors, insulators and semiconductors is the valence and conduction band structure. In case of conductors, the valence band overlaps the conduction band. The electrons in conduction band can move nearly freely throughout the crystal. For insulators, there is no overlap, and the energy gap $E_{\textrm{g}}$ between the two bands is so high, that it makes any transitions of electrons nearly impossible. However in case of  semiconductors, the $E_{\textrm{g}}$ is small enough to allow the electron jump into the conduction band and leaving the hole in valence band after receiving a sufficient amount of energy - in form of thermal energy $E_{\textrm{T}} = kT$, energy in static electric field $E_{\textrm{s}} = -e\phi$ or as a photon with energy quantum $E_{\textrm{photon}} = \hbar \omega$. The last one is the most important, because it allows us to use the semiconductors as detectors. Both the electron and hole participates on conduction, but they have to be treated as quasiparticles with their specific masses and mobilities. At $T = 0$ K, the electrons occupy the lowest possible states and the highest occupied state is defined by energy of Fermi-level $E_{\textrm{F}}$
 
-\par
- 
-The shape of dispersion relations between energy and $E(\vec{k})$ divides the semiconductors into two categories - direct and indirect semiconductors. For direct semiconductors the minimum in conduction band and maximum in valence band have the same $\vec{k}$, so the transition can occur after the $E_{\textrm{g}}$ is supplied. In case of indirect the minimum and maximum have different $\vec{k}$. To make transition, additional momentum has to be server (for example by phonons) or the supplied energy must be larger to allow transition to the higher state with the same $\vec{k}$.  The Si crystal is an indirect semiconductor.
 
-\par
-The semiconductor materials have usually form of a crystal of diamond structure (two FCC lattices bounded together.) with the lattice atoms bounded by a covalent bond. However in real crystals there are also defects and impurities which may alter the functionality. The impurities can be added by purpose to enhance the properties we seek in procedure called doping. 
+\subsection{Crystal lattice}
+The semiconductor materials have usually form of a crystal of diamond structure (two FCC lattices bounded together.) with the lattice atoms bounded by a covalent bond. However in real crystals there are also defects and impurities which may alter the functionality. The impurities can be added on purpose to enhance the properties we seek in procedure called doping. 
+
+\subsection{Direct and indirect semiconductors}
+ 
+The shape of dispersion relations between energy and $E(\vec{k})$ divides the semiconductors into two categories - direct and indirect semiconductors. For direct semiconductors the minimum in conduction band and maximum in valence band have the same $\vec{k}$, so the transition can occur after the $E_{\textrm{g}}$ is supplied. In case of indirect the minimum and maximum have different $\vec{k}$. To make transition, additional momentum has to be server (for example by phonons) or the supplied energy must be much larger to allow transition to the higher state. %with the same $\vec{k}$.  
+The Si crystal is an indirect semiconductor.
+
+
  
 \section{P-N junction}
+The intrinsic semiconductors have only a little field of applications.
 
 
-- it could be modelled as a capacitor. The capacitance of p-n junction plays a significant role - it alters the dynamical parameters of the detection circuits - it can alter the rising edges of pulses, alter the entire frequency spectra, increase/decrease the SNR.
+The 
+
+- it could be modelled as a simple plate capacitor. The capacitance of p-n junction plays a significant role - it alters the dynamical parameters of the detection circuits - it can alter the rising edges of pulses, alter the entire frequency spectra, increase/decrease the SNR.
 
 \section{Fabrication of semiconductors}
 
 
-
+\subsection{Materials}
 The suitable materials for construction of ionizing radiation detectors are Ge,Si,GaAs and CdTe. The CdTe is used in wide-spectre X-Ray and Gamma Ray Detector.
 
 \section{Detection mechanism}
@@ -40,26 +47,60 @@ The suitable materials for construction of ionizing radiation detectors are Ge,S
 If we want to detect a particle or photon, is has to interact with the detector material - in semiconductor the creation of electron-hole pairs is observed. This could be achieved by interaction mechanisms described in previous chapters, which differ for every type of particle and energy. 
 
 \par
-The main of purpose of semiconductor as a detector, is to perform a linear conversion of the particle/photon energy into the free charge carriers - electrons in conduction band and holes in valence band. The average energy needed to create a single electron-hole pair is usually a fix constant - in Si it is equal to 3.6 eV \cite{Lutz_2007}. Since the Si is an indirect semiconductor, this value is not equal to gap energy, which is lower ($E_{\textrm{g}} = 1.12$ eV). In case of low-energy gamma the two main mechanisms which take place in producing the charge carriers are photoeffect and compton scattering. 
+The main of purpose of semiconductor as a detector, is to perform a linear conversion of the particle/photon energy into the free charge carriers - electrons in conduction band and holes in valence band. The average energy needed to create a single electron-hole pair is usually a fix constant - in Si it is $\epsilon = 3.6$ eV \cite{Lutz_2007}. Since the Si is an indirect semiconductor, this value is not equal to gap energy, which is lower ($E_{\textrm{g}} = 1.12$ eV). In case of low-energy gamma the two main mechanisms which take place in producing the charge carriers are photoeffect and compton scattering. 
 
 \par
-The gamma photon striking the detector firstly interacts with a single electron. If the photoeffect takes its place, the
+The gamma photon striking the detector firstly interacts with a single electron. If the photoeffect takes its place, the primary electron with energy much higher than the thermal excitation will ionize the electrons from all over the valence band pushing them into higher states from conduction band. These Electrons in conduction band deexcite themselves into lower states of conduction band and the holes redistribute themselves to the upper states in valence band. This redistribution process releases energy again which leads to the cascade of further excitations and interactions, which produce many electron-hole pairs - the charge cloud. Number of generated electron-hole pairs $n$ is simply given by relation:
 
 
+\begin{equation}
+n = \frac{E_{\textrm{gamma}}}{\epsilon}.
+\end{equation}
 
+\par
+In case of compton, the scattered photon may escape the detector without any other interaction taking the rest of its energy out of the detector. This results into energy distortion. The compton without any other interaction (compton again or photoeffect) is typical for thin detectors since there is insufficient thickness to stop the scattered photon again. In detected gamma energy spectrum this leads into compton continuum with the compton edge,which devaluates the spectra.
 
-
-
- In case of compton, the scattered photon may escape the detector without any other interaction taking the rest of its energy out of the detector. This results into energy distortion.  
+\par
+An ideal very thick detector could solve this problem, because every possible interaction and all the following sub-interactions will happen inside the detector and will result into electron-hole generation. The detector of this kind would have only the full energy peaks without any other unwanted counts. However, construction of such detector is impossible due to the many technical and manufacturing problems arising with increasing dimensions. 
 
 \par
 In case of p-n junction the created charge carriers in depleted layer are pushed towards electrodes by internal electric field. The  electronics accumulates the charge and converts it into the voltage pulse signal, which is then analysed to extract the energy information.
 
+\section{Main noise sources and resolution limitations}
+The detection efficiency and the energy resolution are strongly dependent on noise which alters the signal. While some negative effects are caused by outer conditions such as temperature or by noise in electronics, some originate strictly from semiconductor material properties and only chance to minimize them is during the crystal's preparation.
+
+\subsection{Fano noise}
+
+The physical effect inside the semiconductor itself which limits the measured energy resolution is the fact that not all of the particle's energy is transformed into charge carriers. Some fraction of energy can be consumed to induce lattice vibrations (phonons). Statistically the relative resolution can be described by following equation:
+
+
+\begin{equation}
+\frac{\Delta E}{E} = 2.35\sqrt{\frac{F\epsilon}{E}},
+\end{equation}
+where $E$ is incoming particle's energy, $\epsilon$ is the average energy needed for the single pair creation and $F$ is a Fano Factor. Fano Factor is a special statistical constant which describes the dispersion in counting process. For Poisson distribution the $F$ is 1. If we consider the case of 14.4 keV gamma inside Si ($\epsilon = 3.6$ eV, $F = 0.12$), the $\frac{\Delta E}{E}$ is equal to 1.3 $\%$ and $\Delta E$ is 185.4 eV.
+\par
+This resolution is sometimes called intrinsic, because the real resolution is much worse. This model does not consider other sources of noise coming from the amplification in electronics, dark currents e.g. 
+
+
+
+
+\subsection{Thermal noise}
+
+It was mentioned that the electrons can be also excited by thermal fluctuations. However, since the many of detector's materials are indirect semiconductors, the thermal excitations are carried through the intermediate states inside the band gap. These states have the origin in imperfections and impurities inside the crystal lattice. The electrons and holes generated this way can join the charge cloud generated by detected particle and decrease the SNR. This phenomenon is usually called dark current.
 
 \par
-The effect which goes against the successful collection of charge carriers is recombination.
+The thermal fluctuations are much more significant for materials which require less energy to excite the electrons to the conduction band such as Ge. These detectors always have to be operated at low temperatures. Even the room temperature can lead up to the breakdown and destruction of a detector. For Si, the valence and conduction band are more distant. so the thermal fluctuations are not so critical.
 
-\section{Main noise sources and limitations}
+
+\subsection{Recombination and trapping}
+The effect which goes against the successful collection of charge carriers and thus affects the detection efficiency and the energy resolution is recombination. In pure crystals, the electron can recombine with hole only when they have the same $\vec{k}$. However, inside real crystals there exists impurities, which allows carriers to recombine - recombination centres. The charge collection must take much less time than it takes the carriers to recombine. 
+\par
+Another effect caused by the very same impurities is trapping. The trapping centres capture electron or hole and release it after certain time. This effect alter the signal pulses and can decrease maximum possible counting rate.
+\par
+Energy levels near the centre of band gap are primary responsible for recombination and trapping, which means that the impurities causing this are not the impurities which were added in doping, because these have their additional energy levels near the bands. 
+
+
+
 
 \section{Construction scheme of Instruments for gamma detection based on semiconductors}
 
@@ -70,6 +111,23 @@ The effect which goes against the successful collection of charge carriers is re
 \subsection{XR-100CdTe X-Ray and Gamma Ray Detector}
 
 \subsection{MIMOS 2}
+
+
+\section{Detector structure}
+The 
+
+Its obvious that for particles' interactions inside the detector the most crucial layers' dimensions are those in cross section normal to the incident radiation. 
+The dead layer (usually the p) has to be thin as possible to reduce probability that the particle interacts in place where the generated charge cloud would nearly immediately recombine. The active layer intristic 
+
+
+\begin{figure}[H]
+ \centering
+ \includegraphics[scale=0.35, angle = 0]{./pictures/SiPINScheme.png}
+ \caption{Cross section of Si detector for scintillator coupling and Si direct detector \cite{SiPINdirect}.}
+ \label{SiPIN}
+ 
+\end{figure}
+
 
 
 \section{Available detection diodes}
