--- a/citations.bib
+++ b/citations.bib
@@ -45,7 +45,7 @@ language     = {english}
 
 @BOOK{Lutz_2007, title="Semiconductor radiation detectors", publisher="Springer", author="Lutz, Gerhad", year=2007,language = "en" } 
 
-@misc{compounds,
+@misc{SiPINdirect,
 author       = {Hamamatsu},
 title     = {Si detectors for high energy particles},
 note       = {\url{https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/high_energy_kspd9002e.pdf}},
