--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -240,9 +240,13 @@ In~Olomouc~\today   \hfill\parbox[t]{6cm}{\centering\null\dotfill\\\student}
 
 \input{Semiconductors}
 
+\input{Mossbauer}
+
 \input{pulseAnalysis}
 
-\input{Mossbauer}
+\input{Algorytms}
+
+
 % -----------------------------------------------
 % Závěr
 % -----------------------------------------------
