--- a/gammaRays.tex
+++ b/gammaRays.tex
@@ -9,7 +9,7 @@
 
 % -----------------------------------------------
 \section{Gamma emission}
-In opposite to alpha and beta particles, the gamma rays are without charge and their rest mass is zero, and thus they are considered to be high-energetic photons, but the mayor difference to the RTG photons they originate only from atomic nucleus upon its deexcitation from higher energy level to lower. The energy levels of nucleus are similar to the levels in electron shell - discrete, characteristic for every isotope and can be described by quantum numbers. The gamma emission is usually follows alpha or beta decays. The gamma photon is emitted, because the new nucleus is created in an excited state.
+In opposite to alpha and beta particles, the gamma rays are without charge and their rest mass is zero, and thus they are considered to be high-energetic photons, but the mayor difference to the X-Ray photons they originate only from atomic nucleus upon its deexcitation from higher energy level to lower. The energy levels of nucleus are similar to the levels in electron shell - discrete, characteristic for every isotope and can be described by quantum numbers. The gamma emission is usually follows alpha or beta decays. The gamma photon is emitted, because the new nucleus is created in an excited state.
 
 
 % -----------------------------------------------
@@ -117,12 +117,28 @@ At much higher energies, the photon can be converted into electron-positron pair
 \par
 The pair production along with electron bremsstrahlung radiation  are key effects for electron-photon shower development. If the created electron/positron has sufficient energy, it emits bremsstrahlung photons. These bremsstrahlung photons can again interact via the pair production, and thus creating new electrons again. This process of shower development continues until the energy of electron/positron pairs drops under the energy, which is required to produce bremsstrahlung radiation.
 \par
-For low-energy gammas the cross-section is so small, which means that for the purposes of this thesis, this interaction effect could be neglected.
+Negative effects arising from this type of interaction like creation of single and double escape peaks or annihilation peaks in spectra will not be observed, because for low-energy gammas the cross-section is very small. That means that for the purposes of this thesis, this interaction effect could be neglected.   
 
 
 \subsection{Characteristic energy spectra}
 Every gamma source emits its characteristic photons with certain probabilities. However, before these photons are captured by detector, many effects can occur in environment or inside the detector - photons can interact various materials without detection purpose such as shielding, spectrum can be altered by 
 noise events in detector etc.
+\par
+Inside detector the low-energy spectre can be affected by:
+\begin{itemize}
+\item X-ray escape peaks - If the photo-effect occurs on atomic energy levels, the characteristic X-ray of the detector material is emitted. The escape peak has the energy of captured photon minus the energy of escaped gamma ray.
+\item Compton continuum with edge - the photon interacts inside detector by Compton scattering, scattered photon leaves the detector.
+
+\end{itemize}
+
+In environment the low-energy spectre can be affected by:
+\begin{itemize}
+\item Characteristic X-rays - radiation induced fluoresce usually from the shielding material (Pb).
+\item Backscatter peak - Compton scattering which occurred over a large angle.
+\end{itemize}
+
+
+For Mössbauer spectroscopy the $^{57}$Co is usually used with gamma spectre shown below:
 
 
 % %%%%%%%%%%%%%%%%%%%%%%%% End of file %%%%%%%%%%%%%%%%%%%%%%%%
